# GramVoc

./: .env  docker-compose.yml  main.py  pyproject.toml
src/: config.py  database.py  main.py  models.py
